# novel

./: .coverage  .current-copy.yaml  .env.example  .gitignore  .projects-copy.yaml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  GUIDE.md  Makefile  README-AUTHOR.md  README-EDITOR.md  README.md  pyproject.toml  requirements.txt
.agents/: AGENTS.md
.agents/agents/: character-designer.md  consistency-checker.md  narrative-writer.md  story-architect.md
.agents/skills/: SKILL_TEMPLATE.md
.claude/: settings.json
.claude/memory/: MEMORY.md
.claude/skills/: reference-reporting.md
.cursor/audits/: 20260410_170000_claude-skills.md
.cursor/rules/: novel-core-constraints.mdc  novel-project-context.mdc  novel-workflow.mdc  (+1 more)
backend/: config.py  main.py  requirements.txt
docs/: BUSINESS-EXPANSION.md  DESIGN.md  PIPELINE.md  PLANS.md  QUALITY_SCORE.md  README.md  RELIABILITY.md  REQUIREMENTS.md  SECURITY.md  SKILL_CONTRACT_AUDIT.md  SPEC.md  USAGE-GUIDE.md  USER_MANUAL.md  ai-harness-research.md  analysis_report.md  architecture-map-data.js  architecture-map.html  backend.md  feedback.md  frontend.md  index.md  novel-pipeline.md  skill-dependency-graph.md
frontend/: README.md  index.html  package-lock.json  package.json  start.sh  vite.config.ts
references/: anti_ai_rules.md
scripts/: __init__.py  export.py  generate.py  generate_engine.py  project.py  search.py  stats.py  write.py
tests/: run_tests.py  run_tests_audit.py  scenario-coverage-report-v2.md  scenario-coverage-report.md  test-report.json  test_cli.py  test_config.py  test_pipeline_project.py
(+518 files in other folders)
